name:                pixelcube
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/megabug/pixelcube#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Daley
maintainer:          mattd@bugfuzz.com
copyright:           2017 Matthew Daley
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pixelcube
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
